--- a/chess/board_plugin/Cargo.toml
+++ b/chess/board_plugin/Cargo.toml
@@ -9,7 +9,7 @@ debug = ["colored", "bevy-inspector-egui"]
 
 [dependencies]
 bevy = "0.14.2"
-bevy-inspector-egui = "0.27.0"
-colored = "2.1.0"
+bevy-inspector-egui = {version = "0.27.0", optional = true}
+colored =  { version = "2.1.0", optional = true }
 rand = "0.8.5"
 serde = "1.0.214"
